--- a/modules/argocd/argo-application.yml
+++ b/modules/argocd/argo-application.yml
@@ -12,7 +12,7 @@ spec:
     helm:
       valueFiles:
         - values.yaml
-    path: charts/${workspace}/${owner}/${namespace}
+    path: ${path}
     repoURL: ${repository}
     targetRevision: HEAD
   syncPolicy:
