--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.idea/
 /ixo-terra-infra.iml
 /modules/kubernetes_cluster/kubeconfig.yaml
+**/.terraform/
+/.terraform.lock.hcl
+/terraform.tfstate.d/
