--- a/modules/argocd/crds/argo-application-helm.yml
+++ b/modules/argocd/crds/argo-application-helm.yml
@@ -8,6 +8,7 @@ spec:
   source:
     chart: ${chart}
     repoURL: ${repository}
+    enableOCI: ${isOci}
     targetRevision: ${revision}
     helm:
       releaseName: ${chart}
