--- a/config/yml/matrix/matrix-values.yml
+++ b/config/yml/matrix/matrix-values.yml
@@ -34,10 +34,9 @@ externalPostgresql:
   host: ${pg_host}
   port: 5432
   username: ${pg_username}
-#  password: ${pg_password}
 
   ## The name of an existing secret with postgresql credentials
-  existingSecret: synapse-pguser-synapse
+  existingSecret: ${pg_cluster_name}-pguser-${pg_username}
 
   ## Password key to be retrieved from existing secret
   existingSecretPasswordKey: password
