Cleanup, Added Vault

--- a/config/yml/postgres-operator/ixo-postgres-backups-repos.yml
+++ b/config/yml/postgres-operator/ixo-postgres-backups-repos.yml
@@ -1,8 +1,9 @@
 - name: repo1
   volume:
     volumeClaimSpec:
+      storageClassName: "vultr-block-storage-hdd"
       accessModes:
         - "ReadWriteOnce"
       resources:
         requests:
-          storage: 40Gi
+          storage: 200Gi
