--- a/config/yml/postgres-operator/ixo-postgres-instances.yml
+++ b/config/yml/postgres-operator/ixo-postgres-instances.yml
@@ -1,5 +1,6 @@
 - name: ixo-postgresql-0
   dataVolumeClaimSpec:
+    storageClassName: "vultr-block-storage"
     accessModes:
       - "ReadWriteOnce"
     resources:
