--- a/config/yml/helm_values/ixo-common.yml
+++ b/config/yml/helm_values/ixo-common.yml
@@ -21,14 +21,8 @@ env:
   - name: PORT
     value: '5000'
   - name: WEB3_KEY
-    valueFrom:
-      secretKeyRef:
-        name: ${app_name}-${app_namespace}
-        key: WEB3_KEY
+    value: <path:${kv_mount}/data/${app_namespace}#WEB3_KEY>
   - name: WEB3_PROOF
-    valueFrom:
-      secretKeyRef:
-        name: ${app_name}-${app_namespace}
-        key: WEB3_PROOF
+    value: <path:${kv_mount}/data/${app_namespace}#WEB3_PROOF>
   - name: DATABASE_URL
     value: ${DB_ENDPOINT}
