--- a/config/yml/helm_values/prometheus.yml
+++ b/config/yml/helm_values/prometheus.yml
@@ -96,3 +96,8 @@ grafana:
       - secretName: grafana-tls
         hosts:
           - ${host}
+  additionalDataSources:
+    - name: loki
+      access: proxy
+      type: loki
+      url: http://loki-gateway.loki.svc.cluster.local
