--- a/modules/loki_logs/crds/agent.yml
+++ b/modules/loki_logs/crds/agent.yml
@@ -14,3 +14,9 @@ spec:
       matchLabels:
         app.kubernetes.io/instance: ${name}-logs
   serviceAccountName: ${name}
+  resources:
+    limits:
+      memory: 200Mi
+    requests:
+      cpu: 50m
+      memory: 100Mi
