--- a/config/yml/helm_values/cert-manager-values.yml
+++ b/config/yml/helm_values/cert-manager-values.yml
@@ -1,1 +1,14 @@
 installCRDs: true
+resources:
+  limits:
+    memory: 64Mi
+  requests:
+    cpu: 10m
+    memory: 32Mi
+webhook:
+  resources:
+    limits:
+      memory: 64Mi
+    requests:
+      cpu: 10m
+      memory: 32Mi
