--- a/config/yml/helm_values/ixo-common.yml
+++ b/config/yml/helm_values/ixo-common.yml
@@ -26,3 +26,9 @@ env:
     value: <path:${kv_mount}/data/${app_namespace}#WEB3_PROOF>
   - name: DATABASE_URL
     value: ${DB_ENDPOINT}
+resources:
+  requests:
+    memory: 100Mi
+    cpu: "250m"
+  limits:
+    memory: 200Mi
