Cleanup & additional config for prometheus/nginx/argo

--- a/config/yml/helm_values/nginx-ingress-controller-values.yml
+++ b/config/yml/helm_values/nginx-ingress-controller-values.yml
@@ -8,6 +8,8 @@ controller:
   service:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: ${host}
+  admissionWebhooks:
+    failurePolicy: Ignore
 defaultBackend:
   resources:
     limits:
