--- a/modules/argocd/argo-values.yml
+++ b/modules/argocd/argo-values.yml
@@ -77,6 +77,9 @@ repoServer:
         - mountPath: /custom-tools
           name: custom-tools
 configs:
+  rbac:
+    policy.csv: |
+      g, ${org}:${environment}-devsecops, role:admin
   cm:
     create: true
     dex.config: |
@@ -89,7 +92,6 @@ configs:
             clientSecret: ${github_client_secret}
             orgs:
               - name: ${org}
-
   cmp:
     create: true
     plugins:
