--- a/modules/loki_logs/crds/pod_logs.yml
+++ b/modules/loki_logs/crds/pod_logs.yml
@@ -34,6 +34,10 @@ spec:
         - __meta_kubernetes_pod_container_name
       targetLabel: container
     - action: replace
+      sourceLabels:
+        - __meta_kubernetes_pod_container_name
+      targetLabel: name
+    - action: replace
       replacement: ${name}
       targetLabel: cluster
   namespaceSelector:
