--- a/config/yml/helm_values/dex-values.yml
+++ b/config/yml/helm_values/dex-values.yml
@@ -1,3 +1,9 @@
+resources:
+  limits:
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 64Mi
 ingress:
   enabled: true
   className: nginx
