--- a/charts/matrix-admin/templates/deployment.yaml
+++ b/charts/matrix-admin/templates/deployment.yaml
@@ -37,6 +37,13 @@ spec:
             - name: http
               containerPort: {{ .Values.server.port }}
               protocol: TCP
+          command:
+            - "yarn"
+          args:
+            - "start"
+            {{- if .Values.server.additionalArgs }}
+            {{- toYaml .Values.server.additionalArgs | nindent 12 }}
+            {{- end }}
           env:
             {{- toYaml .Values.server.env | nindent 12 }}
           livenessProbe:
