Metrics, Config, remove OpenEBS due to storage mount issue

--- a/config/yml/postgres-operator/ixo-postgres-instances.yml
+++ b/config/yml/postgres-operator/ixo-postgres-instances.yml
@@ -1,4 +1,9 @@
 - name: ixo-postgresql-0
+  replicas: 2
+  resources:
+    requests:
+      cpu: 400m
+      memory: 1Gi
   dataVolumeClaimSpec:
     storageClassName: "vultr-block-storage"
     accessModes:
