--- a/charts/matrix-slack/templates/deployment.yaml
+++ b/charts/matrix-slack/templates/deployment.yaml
@@ -34,6 +34,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
+              mkdir /data
               echo "{{ .Files.Get "config.yml" | quote }}" > /data/config.yml
       containers:
         - name: {{ .Chart.Name }}
