--- a/config/yml/helm_values/matrix-slack.yml
+++ b/config/yml/helm_values/matrix-slack.yml
@@ -1,5 +1,6 @@
 config:
-  homeserver:
-    domain: ${domain}
-database:
-  uri: ${postgresUri}
+  matrix_slack:
+    homeserver:
+      domain: ${domain}
+    database:
+      uri: ${postgresUri}
