--- a/charts/matrix-slack/templates/deployment.yaml
+++ b/charts/matrix-slack/templates/deployment.yaml
@@ -27,17 +27,6 @@ spec:
       serviceAccountName: {{ include "matrix-slack.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.server.podSecurityContext | nindent 8 }}
-      initContainers:
-        - name: init-config
-          image: busybox  # or any image with tools to manipulate files
-          command:
-            - "/bin/sh"
-            - "-c"
-            - |
-              echo '{{ .Values.config.matrix_slack | toYaml | quote }}' > /data/config.yaml
-          volumeMounts:
-            - mountPath: /data
-              name: storage
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -64,11 +53,12 @@ spec:
           resources:
             {{- toYaml .Values.server.resources | nindent 12 }}
           volumeMounts:
-            - mountPath: /data
+            - mountPath: /data/config.yaml
               name: storage
       volumes:
         - name: storage
-          emptyDir: {}
+          configMap:
+            name: {{ include "matrix-slack.fullname" . }}-config
       {{- with .Values.server.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
