--- a/charts/matrix-slack/templates/deployment.yaml
+++ b/charts/matrix-slack/templates/deployment.yaml
@@ -55,6 +55,7 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: storage
+              readOnly: false
       volumes:
         - name: storage
           configMap:
