--- a/charts/matrix-slack/templates/deployment.yaml
+++ b/charts/matrix-slack/templates/deployment.yaml
@@ -70,8 +70,7 @@ spec:
           configMap:
             name: {{ include "matrix-slack.fullname" . }}-config
         - name: data
-          persistentVolumeClaim:
-            claimName: matrix-synapse
+          emptyDir: {}
       {{- with .Values.server.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
